# zaehlergui

./: .gitignore  AppImageBuilder.yml  CHANGES.txt  Cargo.toml  GTK_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __main__.py  bridge.rs  build-deb.sh  build-deb.yml  build.rs  control  data_manager.py  gtk_compat.py  install.old  install.sh  main_window.py  postinst  postrm  prerm  release.sh  requirements.txt  rustfmt.toml  settings_window.py  test_compatibility.sh  ui_helpers.py  uninstall.sh  verbrauchsmanager  verbrauchsmanager.code-workspace  verbrauchsmanager.conf  verbrauchsmanager.desktop  zaehlerstaende copy.old  zaehlerstaende.py
.github/workflows/: appimage.yml  build-appimage.yml  build-deb.yml
packaging/debian/DEBIAN/: control
packaging/scripts/: build-deb.sh
qml/: DatenbankSeite.qml
src/: app.rs  datenbank.rs  main.rs
src/zaehlerstaende/: __main__.py  main.py
