[package]
name        = "verbrauchsmanager"
version     = "1.0.0"
edition     = "2021"
description = "Strom-, Wasser- und Gasverbrauchsmanager mit Qt 6 UI"
authors     = ["Verbrauchsmanager"]

[[bin]]
name = "verbrauchsmanager"
path = "src/main.rs"

[dependencies]
# Qt6 Rust-Bindings – 0.8 unterstützt #[qproperty] und #[qinvokable]
cxx-qt     = "0.8"
cxx-qt-lib = "0.8"

# Datenbank – SQLite statisch gelinkt
rusqlite = { version = "0.31", features = ["bundled"] }

# CSV-Export
csv = "1.3"

# XLSX-Export
rust_xlsxwriter = "0.68"

# Datum / Zeit
chrono = { version = "0.4", features = ["serde"] }

# Betriebssystem-Pfade
dirs = "5.0"

# Fehlerbehandlung
anyhow = "1.0"

[build-dependencies]
cxx-qt-build = "0.8"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
