[package]
name        = "verbrauchsmanager"
version     = "1.0.0"
edition     = "2021"
description = "Strom-, Wasser- und Gasverbrauchsmanager"
authors     = ["Verbrauchsmanager"]

[[bin]]
name = "verbrauchsmanager"
path = "src/main.rs"

[dependencies]
# GUI – reines Rust, keine C++ Bindings nötig
eframe          = { version = "0.27", features = ["default"] }
egui            = "0.27"
egui_extras     = { version = "0.27", features = ["image"] }

# Datenbank – SQLite statisch gelinkt
rusqlite        = { version = "0.31", features = ["bundled"] }

# CSV-Export
csv             = "1.3"

# XLSX-Export
rust_xlsxwriter = "0.68"

# Datum / Zeit
chrono          = { version = "0.4", features = ["serde"] }

# Betriebssystem-Pfade
dirs            = "5.0"

# Datei-Dialoge (Öffnen/Speichern)
rfd             = "0.14"

# Fehlerbehandlung
anyhow          = "1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
